<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/body"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/body"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scaleType="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eyebrows"
            android:src="@mipmap/eyebrows"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arms"
            android:src="@mipmap/arms"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ears"
            android:src="@mipmap/ears"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eyes"
            android:src="@mipmap/eyes"
            android:visibility="invisible"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/glasses"
            android:src="@mipmap/glasses"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mouth"
            android:src="@mipmap/mouth"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mustache"
            android:src="@mipmap/mustache"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hat"
            android:src="@mipmap/hat"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nose"
            android:layout_gravity="right"
            android:src="@mipmap/nose"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shoes"
            android:src="@mipmap/shoes"
            android:visibility="invisible"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arms"
                android:id="@+id/checkbox_arms"
                android:onClick="toggleVisibility"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyebrows"
                android:id="@+id/checkbox_eyebrows"
                android:onClick="toggleVisibility"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glasses"
                android:id="@+id/checkbox_glasses"
                android:onClick="toggleVisibility"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mouth"
                android:id="@+id/checkbox_mouth"
                android:onClick="toggleVisibility"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nose"
                android:id="@+id/checkbox_nose"
                android:onClick="toggleVisibility"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
          >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ears"
                android:id="@+id/checkbox_ears"
                android:onClick="toggleVisibility"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyes"
                android:id="@+id/checkbox_eyes"
                android:onClick="toggleVisibility"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hat"
                android:id="@+id/checkbox_hat"
                android:onClick="toggleVisibility"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mustache"
                android:id="@+id/checkbox_mustache"
                android:onClick="toggleVisibility"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes"
                android:id="@+id/checkbox_shoes"
                android:onClick="toggleVisibility"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
